Fixed playback issue with z-index

--- a/src/Assets/CSS/App.css
+++ b/src/Assets/CSS/App.css
@@ -102,7 +102,8 @@ body{
     height: 400px;
 }
 .audio-display{
-    z-index: -1;
+    width: 400px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
